# Autonomous-Docker-Error-Fixer

./: .dockerignore  .env example  Dockerfile  README.md  display_graph.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/actions/: router.py
app/api/routes/container/: container_add.py  container_delete.py  container_get.py  container_update.py  router.py
app/api/routes/documents/: documents_add.py  router.py
app/api/routes/llm/: llm_request.py  router.py
app/api/routes/user/: test.py
app/api/websocket/: container_logs_ws.py
app/core/: config.py  loadenv.py
app/db/: create_vector_index.py
app/db/model/: chat_model.py  containers_model.py  document_model.py  error_log_model.py
app/db/schema/: chat_schema.py  container_schema.py  document_schema.py  llm_schema.py
app/services/actions/: action_manager.py
app/services/ai_agent/: agent.py  error_decision.py  graph.py  log_analysis.py  state.py  tools.py
app/services/ai_agent/tools/: web_search.py
app/services/docker/: container_logs.py  container_watcher.py  error_log_service.py  log_broadcaster.py  watcher_manager.py
app/services/embedding/: embedding_model.py  retrieve_service.py
app/static/: index.html
